# AgiTeamApp

./: .env.equiv.example  .gitignore  README.md  docker-compose.equiv.yml  docker-compose.yml  package.json  pnpm-lock.yaml  startbackend.sh  startfront.sh  tailwind.config.js  vite.config.js
_archive/: NOTICE_20260622155331
_archive/backend/: startbackend.sh
_archive/backend-python/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
_archive/backend-python/_backup/: deleted_image_dupe_20260614.json  deleted_image_dupe_20260614_room-9a232a44.json
_archive/backend-python/app/: __init__.py  deps.py
_archive/backend-python/app/db/: base.py  repositories.py  serializers.py
_archive/backend-python/app/routers/: artifacts.py  projects.py  rooms.py  runtime.py
_archive/backend-python/app/schemas/: collector.py  project.py
_archive/backend-python/app/services/: artifact_service.py  attachment_service.py  background.py  cmux_discovery.py  correlation.py  log_collector.py  masking.py  tmux_adapter.py  transcript_collector.py  transcript_parser.py
_archive/backend-python/migrations/: 0001_init.sql  0003_room_canonical_project_role.sql  0004_message_team_session_provenance.sql  0005_message_attachments.sql  0006_runtime_activity_poller_source.sql
_archive/backend-python/scripts/: cleanup_image_dupe.py
_archive/backend-python/tests/: test_activity_liveness.py  test_api_smoke.py  test_artifact_code_viewer.py  test_artifact_project_root.py  test_artifact_root_type.py  test_artifact_tree_file.py  test_artifact_watcher.py  test_artifact_write.py  test_attachment_service.py  test_correlation.py  test_cors_config.py  test_discovery.py  test_hook_normalizer.py  test_image_meta.py  test_log_collector.py  test_masking.py  test_message_pagination.py  test_message_updates_cursor.py  test_message_updates_project_isolation.py  test_migration_enums.py  test_mux_port.py  test_pm_bridge_attachments.py  test_pm_bridge_dedup.py  test_project_identity.py  test_transcript_collector.py  test_transcript_dedup.py  test_transcript_parser.py
_archive/backend/backend-rs/: Cargo.toml
_archive/backend/backend-rs/crates/agiteamapp-core/src/: activity.rs  attachments.rs  discovery.rs  events.rs  message.rs  query.rs  repo.rs
_archive/backend/backend-rs/crates/agiteamapp-core/tests/: artifact_context_menu.rs
_archive/backend/backend-rs/crates/agiteamapp-http/src/: main.rs
_archive/backend/backend-rs/crates/agiteamapp-mux/: Cargo.toml
_archive/backend/backend-rs/crates/agiteamapp-mux/src/: lib.rs
_archive/docker/: .dockerignore
_archive/front/: Dockerfile.frontend  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  viewer.html
backend/: .env.example  README.md  requirements.txt
backend-rs/crates/agiteamapp-core/: Cargo.toml
backend-rs/crates/agiteamapp-core/src/: activity.rs  artifact_changes.rs  artifacts.rs  attachments.rs  discovery.rs  event.rs  hook.rs  lib.rs  masking.rs  message.rs  query.rs  repo.rs  send.rs  transcript.rs
backend-rs/crates/agiteamapp-core/tests/: artifact_delete.rs  send_compose.rs  sys_notification.rs
backend-rs/crates/agiteamapp-http/: Cargo.toml
backend-rs/crates/agiteamapp-http/src/: main.rs  supervisor.rs
backend-rs/migrations/: 0007_event_source_mux_rename.sql
backend/app/: config.py  errors.py  main.py
backend/tests/: conftest.py  (+23 more)
docker/: .env.example  nginx.conf
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
tests/: selftest.mjs
(+214 files in other folders)
