[package]
name = "agiteamapp-http"
version = "0.1.0"
edition = "2021"

# axum adapter 만(라우팅·핸들러 → core 호출). DB 는 agiteamapp-db 를 주입.
[dependencies]
agiteamapp-core = { path = "../agiteamapp-core" }
agiteamapp-db = { path = "../agiteamapp-db" }
agiteamapp-mux = { path = "../agiteamapp-mux" }
axum = { workspace = true, features = ["ws", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
notify = "6"
# ACT-POL-03 supervisor: child(PollerFaster-rs) 에 SIGTERM 전파(graceful), pid liveness 점검.
libc = "0.2"
# WG-ART-07 휴지통식 삭제: _archive 백업 파일명 타임스탬프(YYYYMMDDhhmmss, 로컬시각) 생성.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
